add_executable(example example.cpp)
if(WIN32)
  target_link_libraries(example castislogger fmt::fmt ${Boost_LIBRARIES})
else(WIN32)
  add_definitions(-Wall -g -Os)
  target_link_libraries(example castislogger fmt::fmt ${Boost_LIBRARIES} pthread rt)
endif(WIN32)

add_executable(example_async example_async.cpp)
if(WIN32)
  target_link_libraries(example_async castislogger fmt::fmt ${Boost_LIBRARIES})
else(WIN32)
  add_definitions(-Wall -g -Os)
  target_link_libraries(example_async castislogger fmt::fmt ${Boost_LIBRARIES} pthread rt)
endif(WIN32)

add_executable(example_filter example_filter.cpp)
if(WIN32)
  target_link_libraries(example_filter castislogger fmt::fmt ${Boost_LIBRARIES})
else(WIN32)
  add_definitions(-Wall -g -Os)
  target_link_libraries(example_filter castislogger fmt::fmt ${Boost_LIBRARIES} pthread rt)
endif(WIN32)

add_executable(example_ch example_ch.cpp)
if(WIN32)
  target_link_libraries(example_ch castislogger fmt::fmt ${Boost_LIBRARIES})
else(WIN32)
  add_definitions(-Wall -g -Os)
  target_link_libraries(example_ch castislogger fmt::fmt ${Boost_LIBRARIES} pthread rt)
endif(WIN32)

add_executable(example_access example_access.cpp)
if(WIN32)
  target_link_libraries(example_access castislogger fmt::fmt ${Boost_LIBRARIES})
else(WIN32)
  add_definitions(-Wall -g -Os)
  target_link_libraries(example_access castislogger fmt::fmt ${Boost_LIBRARIES} pthread rt)
endif(WIN32)

add_subdirectory(../submodules/fmt ../build/submodules/fmt)
